force-app/main/default/objects/Docketing_Rule_Engine__c.object
<CustomObject>
    <fields>
        <fullName>Adjust_to_a_Specific_Date__c</fullName>
        <description>If the Adjustment picklist value is a &quot;Adjust to a specific date&quot;, then this field is mandatory. Format - DD/MM.</description>
        <label>Adjust to a Specific Date</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdjustmentType__c</fullName>
        <description>Due date Adjustment</description>
        <label>Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of month</fullName>
                </value>
                <value>
                    <fullName>End of quarter</fullName>
                </value>
                <value>
                    <fullName>End of year</fullName>
                </value>
                <value>
                    <fullName>Plus 15 days</fullName>
                </value>
                <value>
                    <fullName>Plus 10 days</fullName>
                </value>
                <value>
                    <fullName>Less 1 day</fullName>
                </value>
                <value>
                    <fullName>Adjust to a specific date</fullName>
                </value>
                <value>
                    <fullName>Adjusted to the effective filing date day and month</fullName>
                </value>
                <value>
                    <fullName>Plus 0 days</fullName>
                </value>
                <value>
                    <fullName>First Day Of The Month Following The Month Of International Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Asset_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Date_1__c</fullName>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Dates</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Date_Compound__c</fullName>
        <label>Base Date Compound</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Earliest Priority Date</fullName>
                </value>
                <value>
                    <fullName>Effective Filing Date</fullName>
                </value>
                <value>
                    <fullName>Filing Date</fullName>
                </value>
                <value>
                    <fullName>Grant Date</fullName>
                </value>
                <value>
                    <fullName>Hearing Date</fullName>
                </value>
                <value>
                    <fullName>Mail Date</fullName>
                </value>
                <value>
                    <fullName>Marketing Approval Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Date__c</fullName>
        <label>Base Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Base_Dates</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CD Rule Calculation 1 - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CD Rule Calculation - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COperator1__c</fullName>
        <label>CD Rule Calculation 1 - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COperator__c</fullName>
        <label>CD Rule Calculation - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPeriod_Type1__c</fullName>
        <label>CD Rule Calculation 1 - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CPeriod_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                    <default>true</default>
                    <label>Day(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPeriod_Type__c</fullName>
        <label>CD Rule Calculation - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                    <default>true</default>
                    <label>Month(s)</label>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CYearsToCal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CD Rule Calculation - Year(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Asset_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Case_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseYearsToCal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD End Date - Year(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Count1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD End Date 1 - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD End Date - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Operator1__c</fullName>
        <label>DD End Date 1 - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Operator__c</fullName>
        <label>DD End Date - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Period_Type1__c</fullName>
        <label>DD End Date 1 - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Close_Period_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                    <default>true</default>
                    <label>Day(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Period_Type__c</fullName>
        <label>DD End Date - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                    <default>true</default>
                    <label>Month(s)</label>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compound_Selection__c</fullName>
        <label>Compound Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Earlier of</fullName>
                </value>
                <value>
                    <fullName>Later Of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>D Rule Calculation 1 - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>D Rule Calculation - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked rules are those added to the base set of rules delivered by MaxVal</description>
        <label>Custom Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_Base_Date_Compound_Calculation__c</fullName>
        <label>D Base Date Compound Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Base_Type_Rule_Calculation__c</fullName>
        <label>D Base Type Rule Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docket_Action__c</fullName>
        <label>Docket Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <formula>IF 
( 
	TEXT(Rule_Type__c) = &apos;Docketing&apos;,  
	IF( YearsToCal__c &gt; 0, TEXT(YearsToCal__c)  + &apos; Year(s) &apos;,&apos;&apos;) 
		+ IF (Count__c&gt;0 ,TEXT(Operator__c) +  TEXT(Count__c) +  &apos; &apos; + TEXT(Period_Type__c) + &apos; &apos;,&apos;&apos;)  
		+ IF (Count1__c&gt;0, TEXT(Operator1__c)  +  TEXT(Count1__c) + &apos; &apos; + TEXT(Period_Type1__c),&apos;&apos;) ,
    IF( StartYearsToCal__c &gt; 0, TEXT(StartYearsToCal__c) + &apos; Year(s) &apos;,&apos;&apos;) 
		+ IF(Start_Count__c &gt; 0, TEXT(Start_Operator__c) + TEXT( Start_Count__c) + &apos; &apos; +  TEXT(Start_Period_Type__c) ,&apos;&apos;) 
		+ IF(Start_Count1__c &gt; 0, TEXT(Start_Operator1__c) + TEXT( Start_Count1__c) + &apos; &apos; +  TEXT(Start_Period_Type1__c) ,&apos;&apos;) 
		+ &apos; &gt; &apos; + IF(Close_Count__c&gt;0, TEXT(Close_Operator__c) + TEXT( Close_Count__c) + &apos; &apos; +  TEXT(Close_Period_Type__c) ,&apos;&apos;) 
		+ IF(Close_Count1__c&gt;0, TEXT(Close_Operator1__c) + TEXT( Close_Count1__c) + &apos; &apos; +  TEXT(Close_Period_Type1__c) ,&apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_of__c</fullName>
        <label>Extension of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Cycle_Stage__c</fullName>
        <label>Life Cycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Life_Cycle_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mark_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Extension__c</fullName>
        <label>Notes Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_General__c</fullName>
        <label>Notes General</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Rule_Calculation_Description__c</fullName>
        <label>Notes Rule Calculation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Source__c</fullName>
        <label>Notes Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operator1__c</fullName>
        <label>D Rule Calculation 1 - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>D Rule Calculation - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Type1__c</fullName>
        <label>D Rule Calculation 1 - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Period_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                    <default>true</default>
                    <label>Day(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Type__c</fullName>
        <label>D Rule Calculation - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                    <default>true</default>
                    <label>Month(s)</label>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RuleUpdatedOn__c</fullName>
        <label>RuleUpdatedOn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule_Base_date__c</fullName>
        <label>Rule Base Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filing Date</fullName>
                </value>
                <value>
                    <fullName>Effective Filing Date</fullName>
                </value>
                <value>
                    <fullName>Grant Date</fullName>
                </value>
                <value>
                    <fullName>Next Renewal Date</fullName>
                </value>
                <value>
                    <fullName>Expiration Date</fullName>
                </value>
                <value>
                    <fullName>Registration Date</fullName>
                </value>
                <value>
                    <fullName>Immediate Parent Expiration Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_End_Date__c</fullName>
        <label>Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Start_Date__c</fullName>
        <label>Rule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Docketing</fullName>
                </value>
                <value>
                    <fullName>De-Docketing</fullName>
                </value>
                <value>
                    <fullName>Sweep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartYearsToCal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD Start Date - Year(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Count1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD Start Date 1 - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DD Start Date - No.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Operator1__c</fullName>
        <label>DD Start Date 1 - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Operator__c</fullName>
        <label>DD Start Date - +/-</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                    <default>true</default>
                    <label>+</label>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Period_Type1__c</fullName>
        <label>DD Start Date 1 - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Start_Period_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                    <default>true</default>
                    <label>Day(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Period_Type__c</fullName>
        <label>DD Start Date - M/D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month(s)</fullName>
                    <default>true</default>
                    <label>Month(s)</label>
                </value>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Id__c</fullName>
        <label>Term Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Sweep</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Document Code</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55555555555555</fullName>
                </value>
                <value>
                    <fullName>A...</fullName>
                </value>
                <value>
                    <fullName>A.NE</fullName>
                </value>
                <value>
                    <fullName>A1/A2 Publication Date</fullName>
                </value>
                <value>
                    <fullName>A1/A3 Publication Date</fullName>
                </value>
                <value>
                    <fullName>ABN</fullName>
                </value>
                <value>
                    <fullName>AP.B</fullName>
                </value>
                <value>
                    <fullName>APD1</fullName>
                </value>
                <value>
                    <fullName>APD2</fullName>
                </value>
                <value>
                    <fullName>APD3</fullName>
                </value>
                <value>
                    <fullName>APDA</fullName>
                </value>
                <value>
                    <fullName>APDN</fullName>
                </value>
                <value>
                    <fullName>APDP</fullName>
                </value>
                <value>
                    <fullName>APDR</fullName>
                </value>
                <value>
                    <fullName>APDT</fullName>
                </value>
                <value>
                    <fullName>APE2</fullName>
                </value>
                <value>
                    <fullName>APEA</fullName>
                </value>
                <value>
                    <fullName>APLW</fullName>
                </value>
                <value>
                    <fullName>APOH</fullName>
                </value>
                <value>
                    <fullName>APP.FILE.REC</fullName>
                </value>
                <value>
                    <fullName>Appeal Brief Due Date</fullName>
                </value>
                <value>
                    <fullName>APRB</fullName>
                </value>
                <value>
                    <fullName>at case creation</fullName>
                </value>
                <value>
                    <fullName>Claim Fee Due</fullName>
                </value>
                <value>
                    <fullName>COCOUT</fullName>
                </value>
                <value>
                    <fullName>Communication from Appeal Board</fullName>
                </value>
                <value>
                    <fullName>Communication under Rule 161</fullName>
                </value>
                <value>
                    <fullName>Communication under Rule 163(1)</fullName>
                </value>
                <value>
                    <fullName>Communication under Rule 59 and Rule 163(2) EPC</fullName>
                </value>
                <value>
                    <fullName>Communication under Rule 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YearsToCal__c</fullName>
        <defaultValue>00</defaultValue>
        <label>D Rule Calculation - Year(s)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Docketing Rule Engine</label>
    <listViews>
        <fullName>Active_Rules</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Classification__c</columns>
        <columns>Docket_Action__c</columns>
        <columns>Base_Date__c</columns>
        <columns>Importance__c</columns>
        <columns>Life_Cycle_Stage__c</columns>
        <columns>Trigger__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>Rule_Start_Date__c</columns>
        <columns>Rule_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Unique_Id__c</field>
            <operation>equals</operation>
            <value>D5704</value>
        </filters>
        <label>Active Rules</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trigger__c</columns>
        <columns>Docket_Action__c</columns>
        <columns>Rule_Start_Date__c</columns>
        <columns>Rule_End_Date__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Base_Date__c</columns>
        <columns>Mark_Closed__c</columns>
        <columns>Mark_Completed__c</columns>
        <columns>Due__c</columns>
        <columns>Rule_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_Type__c</field>
            <operation>equals</operation>
            <value>De-Docketing</value>
        </filters>
        <filters>
            <field>Trigger_Type__c</field>
            <operation>equals</operation>
            <value>Document Code</value>
        </filters>
        <filters>
            <field>Trigger__c</field>
            <operation>equals</operation>
            <value>A.NE</value>
        </filters>
        <filters>
            <field>Case_Type__c</field>
            <operation>equals</operation>
            <value>Utility Original</value>
        </filters>
        <label>De-Docketing Rules: TriggerType-DocCode</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Unique_Id__c</columns>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Trigger__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Docket_Action__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>Due__c</columns>
        <columns>Base_Date__c</columns>
        <columns>Base_Date_1__c</columns>
        <columns>Rule_Base_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unique_Id__c</field>
            <operation>equals</operation>
            <value>D10</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unique_Id__c</field>
            <operation>equals</operation>
            <value>D11</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>De_Docketing_Rules</fullName>
        <columns>Asset_Type__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>Trigger__c</columns>
        <columns>Mark_Closed__c</columns>
        <columns>Mark_Completed__c</columns>
        <columns>Docket_Action__c</columns>
        <columns>NAME</columns>
        <columns>Rule_Base_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Type__c</field>
            <operation>equals</operation>
            <value>Patent</value>
        </filters>
        <filters>
            <field>Rule_Type__c</field>
            <operation>equals</operation>
            <value>De-Docketing</value>
        </filters>
        <filters>
            <field>Rule_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>De-Docketing Rules</label>
    </listViews>
    <listViews>
        <fullName>Docketing_Rule</fullName>
        <columns>Asset_Type__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Docket_Action__c</columns>
        <columns>Rule_Base_date__c</columns>
        <columns>Trigger__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>NAME</columns>
        <columns>Rule_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Type__c</field>
            <operation>equals</operation>
            <value>Patent</value>
        </filters>
        <filters>
            <field>Trigger_Type__c</field>
            <operation>equals</operation>
            <value>Document Code</value>
        </filters>
        <label>All Docketing Rules</label>
    </listViews>
    <listViews>
        <fullName>Final_Office_Action_Response_Due</fullName>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Asset_Type__c</field>
            <operation>equals</operation>
            <value>Patent</value>
        </filters>
        <filters>
            <field>Trigger__c</field>
            <operation>equals</operation>
            <value>A.NE</value>
        </filters>
        <filters>
            <field>Trigger_Type__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <filters>
            <field>Docket_Action__c</field>
            <operation>equals</operation>
            <value>Final Office Action Response Due</value>
        </filters>
        <label>Final Office Action Response Due</label>
    </listViews>
</CustomObject>